Fixed icon and header

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,9 @@
 <body>
   <div id="header" class="acrylic dropshadow">
     <div class="float-left">
-      <img src="{{site.baseurl}}/assets/images/labthings_emblem.svg"></img>
+      <a href="/">
+        <img src="{{site.baseurl}}/assets/images/labthings_emblem.svg"></img>
+      </a>
     </div>
     <div class="float-right">
       <a href="https://github.com/labthings">
