Added content and layout fixes

--- a/assets/sass/base/_code.scss
+++ b/assets/sass/base/_code.scss
@@ -1,7 +1,6 @@
 code {
     font-size: 13px;
-    width: 450px;
     border-radius: 6px;
     box-shadow: 0 10px 50px 4px rgba(0,0,0,0.56);
-    margin: 20px 0 50px 0;
+    margin-top: 20px;
 }
