--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
     content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
 
   <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Raleway:wght@800&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=Raleway:wght@800&display=swap"
     rel="stylesheet">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
 
