--- a/assets/sass/base/_root.scss
+++ b/assets/sass/base/_root.scss
@@ -23,8 +23,8 @@ html,
 body {
   padding: 0;
   margin: 0;
-  min-height: 100%;
   width: 100%;
+  min-width: 500px;
   background-color: #FAF7FD;
   font-family: 'Montserrat', sans-serif;
   color: #370660;
