--- a/assets/sass/base/_utilities.scss
+++ b/assets/sass/base/_utilities.scss
@@ -1,3 +1,6 @@
+@import 'variables';
+
+
 .acrylic {
     z-index: 9999;
 }
@@ -61,5 +64,10 @@
     display: flex;
     padding: 0.5em;
     width: 100%;
-    padding: 0 20px 10px 0;
+    padding: 0;
+    margin-right: 20px;
+    @media screen and (max-width: $break-small) {
+        margin-right: $global-left-padding-mobile;
+        width: 100%;
+    }
 }
