--- a/assets/sass/base/_variables.scss
+++ b/assets/sass/base/_variables.scss
@@ -1,5 +1,8 @@
 $header-height: 64px;
 $global-left-padding: 100px;
-$global-left-padding-mobile: 30px;
+$global-left-padding-mobile: 20px;
+
+$global-right-padding: 30px;
+$global-right-padding-mobile: 20px;
 
 $break-small: 600px;
